<resources>
    <string name="app_name" translatable="false">Habit Mate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_add_new_habit">Add new habit</string>
    <string name="example_habit_name">Example Habit name</string>
    <string name="example_description_habit">Example description habit</string>
    <string name="hint_enter_habit_name">Enter habit name</string>
    <string name="hint_description">Read for 30 minutes in the morning</string>
    <string name="save">Save</string>
    <string name="logo_habits_screen">Habits</string>
    <string name="content_description_settings">Settings</string>
    <string name="add_new_habit">Add new habit</string>
    <string name="new_habit">New habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="content_description_exit_to_habit_list_screen">Exit to habit list screen</string>
    <string name="name">Name</string>
    <string name="hint_read_a_book">Read a book</string>
    <string name="description">Description</string>
    <string name="reminders">Reminders</string>
    <string name="add_reminder">Add reminder</string>
    <string name="days_of_the_week">Days of the week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="abbreviation_monday">Mon</string>
    <string name="abbreviation_tuesday">Tues</string>
    <string name="abbreviation_wednesday">Wed</string>
    <string name="abbreviation_thursday">Thurs</string>
    <string name="abbreviation_friday">Fri</string>
    <string name="abbreviation_saturday">Sat</string>
    <string name="abbreviation_sunday">Sun</string>
    <string name="content_description_habit_image">Habit image</string>
    <string name="warning">Warning</string>
    <string name="dialog_warning_data_will_be_lost">Are you sure you want to exit? All unsaved data will be lost.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="hint_habit_name">Read a book</string>
    <string name="mark_habit_as_done">Mark as done</string>
    <string name="remove_the_mark">Remove the mark</string>
    <string name="when_do_you_want_to_do_this">When do you want to do this ?</string>
    <string name="choose_a_time_for_notification">Choose a time for notification</string>
    <string name="selected_time">Selected time:</string>
    <string name="select">Select</string>
    <string name="save_reminder">Save reminder</string>
    <string name="content_description_edit_reminder">Edit reminder</string>
</resources>