<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".presentation.detailshabit.HabitDetailsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_habit_details"
        app:navigationIcon="@drawable/ic_exit"
        app:subtitleCentered="true"
        app:titleCentered="true"
        app:titleTextAppearance="@style/AppTitleScreenText"
        tools:title="@string/hint_habit_name" />

    <TextView
        android:id="@+id/tv_label_description"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@id/tv_label_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_label_description"
        app:layout_constraintTop_toTopOf="@id/tv_label_description"
        tools:text="@string/hint_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/manrope_bold"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/mark_habit_as_done" />


</androidx.constraintlayout.widget.ConstraintLayout>