<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".presentation.addhabit.AddHabitFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_add_habit"
        app:navigationIcon="@drawable/ic_exit"
        app:subtitleCentered="true"
        app:title="@string/new_habit"
        app:titleCentered="true"
        app:titleTextAppearance="@style/AppTitleScreenText" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_habit_name"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_habit"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_habit_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_name_habit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/manrope_medium"
                    android:hint="@string/hint_read_a_book"
                    android:inputType="text"
                    android:textColorHint="?attr/colorOnSurfaceVariant" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_description"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name_habit" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description_habit"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:endIconMode="clear_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_et_description_habit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:gravity="start|top"
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine"
                    android:maxLength="125"
                    android:minLines="3"
                    android:textColorHint="?attr/colorOnSurfaceVariant" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_reminders"
                style="@style/TextSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/reminders"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_description_habit" />

            <TextView
                android:id="@+id/tv_add_reminder"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/add_reminder"
                app:layout_constraintBottom_toBottomOf="@id/tv_reminders"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_reminders" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reminders"
                tools:itemCount="3"
                tools:listitem="@layout/reminder_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>